Add abstract and title+authors+emails

--- a/doc/papers/02.2014/my-report.tex
+++ b/doc/papers/02.2014/my-report.tex
@@ -18,13 +18,13 @@
 \usepackage{graphicx}
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
 
-\title{Grand Report Title}
+\title{A Behavioral Analysis of Multipath TCP}
 
-\author{John Doe, Robert Roe\\
+\author{Silviu Petria, Silviu Popescu\\
 Faculty of Automatic Control and Computers\\
 University POLITEHNICA of Bucharest\\
 Splaiul Independenței 313, Bucharest, Romania, 060042 \\
-\emph{\{john.doe,robert.roe\}@cs.pub.ro}}
+\emph{\{silviu.petria,silviu.popescu\}@cti.pub.ro}}
 
 \date{\today}
 
