--- a/doc/papers/02.2014/my-report.tex
+++ b/doc/papers/02.2014/my-report.tex
@@ -18,7 +18,7 @@
 \usepackage{graphicx}
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
 
-\title{A Behavioral Analysis of Multipath TCP}
+\title{A Behavioral Analysis of Multipath TCP Traffic}
 
 \author{Silviu Petria, Silviu Popescu\\
 Faculty of Automatic Control and Computers\\
