doc: papers: minor changes

--- a/doc/papers/02.2014/src/abstract.tex
+++ b/doc/papers/02.2014/src/abstract.tex
@@ -1,2 +1,9 @@
 % vim: set tw=78 sts=2 sw=2 ts=8 aw et ai:
-Multipath TCP (MPTCP) is an ongoing effort to extend TCP by allowing a connection to use multiple paths in order to improve resource usage efficiency and offer redundancy. Despite having a working implementation, it still faces obstacles before large scale deployment. This study presents the results of an analysis of MPTCP's behavior in a controlled environment, aiming to understand how parameters such as delay, bandwidth, buffer size and congestion window size affect performance. The final goal of the project is to devise a system that allows users to bypass egress firewalls using MPTCP, OpenVPN and tunneling traffic via common protocols.
+Multipath TCP (MPTCP) is an ongoing effort to extend TCP by allowing a
+connection to use multiple paths in order to improve resource usage efficiency
+and offer redundancy. Despite having a working implementation, it still faces
+obstacles before large scale deployment. This study presents the results of an
+analysis of MPTCP's behavior in a controlled environment, aiming to understand
+how link parameters affect performance. The final goal of the project is to
+devise a system that allows users to bypass egress firewalls using MPTCP,
+OpenVPN and tunneling traffic via common protocols.
