--- a/doc/papers/02.2014/my-report.bib
+++ b/doc/papers/02.2014/my-report.bib
@@ -1,14 +1,17 @@
 # sample entry
-@inproceedings{large-scale-p2p-sim,
-	author = {Dinh, Tien Tuan Anh and Theodoropoulos, Georgios and Minson, Rob},
-	title = {{Evaluating Large Scale Distributed Simulation of P2P Networks}},
-	booktitle = {DS-RT '08: Proceedings of the 2008 12th IEEE/ACM International Symposium on Distributed Simulation and Real-Time Applications},
-	year = {2008},
-	isbn = {978-0-7695-3425-1},
-	pages = {51--58},
-	doi = {http://dx.doi.org/10.1109/DS-RT.2008.36},
-	publisher = {IEEE Computer Society},
-	address = {Washington, DC, USA},
+@inproceedings{how-hard-can-it-be,
+ author = {Raiciu, Costin and Paasch, Christoph and Barre, Sebastien and Ford, Alan and Honda, Michio and Duchene, Fabien and Bonaventure, Olivier and Handley, Mark},
+ title = {How Hard Can It Be? Designing and Implementing a Deployable Multipath TCP},
+ booktitle = {Proceedings of the 9th USENIX Conference on Networked Systems Design and Implementation},
+ series = {NSDI'12},
+ year = {2012},
+ location = {San Jose, CA},
+ pages = {29--29},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=2228298.2228338},
+ acmid = {2228338},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
 }
 
 # sample URL
