--- a/doc/papers/02.2014/src/introduction.tex
+++ b/doc/papers/02.2014/src/introduction.tex
@@ -6,7 +6,16 @@ MPTCP is the IETF's attempt to address the need mentioned above. The specificati
 
 MPTCP works by establishing multiple subflows under a single socket connection, with each subflow able to take a separate path to the destination. Subflows are established using TCP SYN packets with special MPTCP options. Each subflow can be seen as a TCP flow independently. Subflows have their own sequence numbers for handling retransmissions, while there is also a per-connection sequence number mechanism to ensure reordering at the destination. MPTCP's break-before-make mechanism allows subflows to be created or destroyed while keeping the connection alive with everything being transparent to the application i.e. switching to another network interface with a different IP address.
 
-The main obstacle for large scale deployment of MPTCP is the presence of middleboxes, intermediary routers or other network devices that interfere and modify packets that pass through them. Since MPTCP relies on newly created TCP options, this is a major issue. MPTCP researchers have found that up to 6\% of middleboxes strip unkown options from the TCP header (with that percentage increasing to 14\% when dealing with connections on port 80). Middlebox constraints have also influenced other design decisions for MPTCP, such as additional subflows in an existing connection requiring a SYN handshake because NAT devices and firewalls drop packets that are not preceded by a SYN.
+The main obstacle for large scale deployment of MPTCP is the presence of
+middleboxes, intermediary routers or other network devices that interfere and
+modify packets that pass through them. Since MPTCP relies on newly created TCP
+options, this is a major issue. MPTCP researchers have found that up to 6\% of
+middleboxes strip unkown options from the TCP header (with that percentage
+increasing to 14\% when dealing with connections on port 80)
+\cite{how-hard-can-it-be}. Middlebox constraints have also influenced other
+design decisions for MPTCP, such as additional subflows in an existing
+connection requiring a SYN handshake because NAT devices and firewalls drop
+packets that are not preceded by a SYN.
 
 Still, the major constraint for MPTCP remains performing at least as well as TCP in any conditions. Since MPTCP can use multiple types of interfaces, each with different characteristics, there is the need to understand how connection or subflow parameters can affect performance.
 
@@ -14,7 +23,9 @@ The purpose of the initial phase of our project is to build a simulation environ
 \begin{itemize}
 \item Bandwidth. Since the tests are run inside a simulator, we are able to test traffic behavior over links ranging from very low bandwidth (1 Mbps) to very high (16 Gbps).
 \item Delay. Similar to bandwidth, we can manipulate delay in order to observe how MPTCP adapts to different RTT values on different paths.
-\item Loss. Channel loss greater than 10\% has been found to cause MPTCP to perform 20-30\% worse than TCP because the congestion controller overestimates the throughput of such subflows \cite{TODO}. We further investigate on this matter.
+\item Loss. Channel loss greater than 10\% has been found to cause MPTCP to
+perform 20-30\% worse than TCP because the congestion controller overestimates
+the throughput of such subflows \cite{how-hard-can-it-be}. We further investigate on this matter.
 \item Receive buffer. The size of the receive buffer is related to the bandwidth-delay product and it needs to be scaled in accordance to the number of packets in flight.
 \item Congestion window. MPTCP uses per-subflow congestion windows. We wish the observe the correlation between the congestion window size and the bandwidth-delay product.
 \end{itemize}
