doc: papers: reorganize content

--- a/doc/papers/02.2014/my-report.tex
+++ b/doc/papers/02.2014/my-report.tex
@@ -40,13 +40,9 @@ Splaiul Independenței 313, Bucharest, Romania, 060042 \\
 \label{sec:introduction}
 \input{src/introduction}
 
-\section{Architecture}
-\label{sec:architecture}
-\input{src/architecture}
-
-\section{Implementation}
-\label{sec:implementation}
-\input{src/implementation}
+\section{TCP Link Characteristics}
+\label{sec:tcp-link}
+\input{src/tcp-link}
 
 \section{Experimental Setup}
 \label{sec:setup}
