--- a/doc/papers/02.2014/my-report.tex
+++ b/doc/papers/02.2014/my-report.tex
@@ -40,6 +40,10 @@ Splaiul Independenței 313, Bucharest, Romania, 060042 \\
 \label{sec:introduction}
 \input{src/introduction}
 
+\section{Related Work}
+\label{sec:related}
+\input{src/related}
+
 \section{TCP Link Characteristics}
 \label{sec:tcp-link}
 \input{src/tcp-link}
