doc: papers: add experimental setup

--- a/doc/papers/02.2014/my-report.bib
+++ b/doc/papers/02.2014/my-report.bib
@@ -47,6 +47,43 @@
  keywords = {data center, mptcp},
 } 
 
+@inproceedings{mininet,
+ author = {Lantz, Bob and Heller, Brandon and McKeown, Nick},
+ title = {A Network in a Laptop: Rapid Prototyping for Software-defined Networks},
+ booktitle = {Proceedings of the 9th ACM SIGCOMM Workshop on Hot Topics in Networks},
+ series = {Hotnets-IX},
+ year = {2010},
+ isbn = {978-1-4503-0409-2},
+ location = {Monterey, California},
+ pages = {19:1--19:6},
+ articleno = {19},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/1868447.1868466},
+ doi = {10.1145/1868447.1868466},
+ acmid = {1868466},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {emulation, open-flow, rapid prototyping, software defined networking, virtualization},
+} 
+
+@inproceedings{mininet-reproduce,
+ author = {Handigol, Nikhil and Heller, Brandon and Jeyakumar, Vimalkumar and Lantz, Bob and McKeown, Nick},
+ title = {Reproducible Network Experiments Using Container-based Emulation},
+ booktitle = {Proceedings of the 8th International Conference on Emerging Networking Experiments and Technologies},
+ series = {CoNEXT '12},
+ year = {2012},
+ isbn = {978-1-4503-1775-7},
+ location = {Nice, France},
+ pages = {253--264},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2413176.2413206},
+ doi = {10.1145/2413176.2413206},
+ acmid = {2413206},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {container-based emulation, reproducible research},
+} 
+
 # sample URL
 @misc{openvz,
 	howpublished = {{http://wiki.openvz.org/}},
