--- a/doc/papers/02.2014/src/results.tex
+++ b/doc/papers/02.2014/src/results.tex
@@ -34,3 +34,10 @@ Figure \ref{fig:16mbps-d} outlines the impact of delay. MPTCP's performance is c
   \label{fig:bdw-max}
 \end{figure}
 
+\begin{figure}
+  \centering
+  \includegraphics[width=0.85\textwidth]{img/throughput-cwnd-notc}
+  \caption{Throughput without overhead associated with traffic control}
+  \label{fig:cwnd-notc}
+\end{figure}
+
