doc: fix some typos

--- a/doc/papers/02.2014/src/conclusion.tex
+++ b/doc/papers/02.2014/src/conclusion.tex
@@ -1,4 +1,3 @@
 % vim: set tw=78 sts=2 sw=2 ts=8 aw et ai:
 
-Novel and revolutionizing approach. Aiming for world domination, as shown in
-\cite{TODO}.
+Novel and revolutionizing approach. Aiming for world domination.
