--- a/doc/papers/02.2014/src/setup.tex
+++ b/doc/papers/02.2014/src/setup.tex
@@ -4,7 +4,7 @@ Having previously presented the various aspects that factor into MPTCP
 performance, the current section describes how a highly configurable computer
 network was modeled. A solution suitable to our analysis should preferably
 yield similar results for several runs of a single test, grant the ability to
-control the features outlined in \ref{sec:tcp-link} in a fine-grained manner
+control the features outlined in Section \ref{sec:tcp-link} in a fine-grained manner
 and also require comodity hardware. To this end, our experiments are based on
 Mininet, a framework well suited for software defined networking. Being both
 scalable and flexible, it conforms to the criteria mentioned above.
