doc: expand on link features

--- a/doc/papers/02.2014/src/introduction.tex
+++ b/doc/papers/02.2014/src/introduction.tex
@@ -32,11 +32,15 @@ Still, the major constraint for MPTCP remains performing at least as well as TCP
 
 The purpose of the initial phase of our project is to build a simulation environment and use it to vary different TCP communication parameters and channel conditions in order to observe how MPTCP performance is affected. We experiment with parameters such as:
 \begin{itemize}
-\item Bandwidth. Since the tests are run inside a simulator, we are able to test traffic behavior over links ranging from very low bandwidth (1 Mbps) to very high (1 Gbps).
+\item Bandwidth. Since the tests are run inside a simulator, we are able to test traffic behavior over links ranging from very low bandwidth to very high.
 \item Delay. Similar to bandwidth, we can manipulate delay in order to observe how MPTCP adapts to different RTT values on different paths.
 \item Loss. Channel loss greater than 10\% has been found to cause MPTCP to
 perform 20-30\% worse than TCP because the congestion controller overestimates
 the throughput of such subflows \cite{how-hard-can-it-be}. We further investigate on this matter.
-\item Receive buffer. The size of the receive buffer is related to the bandwidth-delay product and it needs to be scaled in accordance to the number of packets in flight.
-\item Congestion window. MPTCP uses per-subflow congestion windows. We wish the observe the correlation between the congestion window size and the bandwidth-delay product.
+\item Receive buffer. The size of the receive buffer is related to the amount
+of data in flight and there is the need for a compromise between using too
+much system memory and using the channel inefficiently.
+\item Initial congestion window. MPTCP uses per-subflow congestion windows.
+We wish the observe the correlation between the initial congestion window
+size and the bandwidth-delay product.
 \end{itemize}
