--- a/doc/papers/02.2014/src/tcp-link.tex
+++ b/doc/papers/02.2014/src/tcp-link.tex
@@ -22,7 +22,7 @@ Loss has extremely unpleasant effects when dealing with normal TCP since it
 leads to the congestion window reducing itself. With MPTCP, which has a
 congestion algorithm that factors loss on all subflows, loss rate is liable to
 have an even more pronounced impact. This feature is more relevant to mobile
-communications which exhibit volatile behavior as opposed to datacents, which
+communications which exhibit volatile behavior as opposed to datacenters, which
 are designed for stability.
 
 The receive buffer relates heavily with the bandwidth-delay product since it
