--- a/doc/papers/02.2014/src/conclusion.tex
+++ b/doc/papers/02.2014/src/conclusion.tex
@@ -1,3 +1,5 @@
 % vim: set tw=78 sts=2 sw=2 ts=8 aw et ai:
 
-Novel and revolutionizing approach. Aiming for world domination.
+We have performed experiments to determine the influence of TCP traffic parameters over MPTCP with the end goal of seeing under which circumstances MPTCP offers optimal performance. We have taken into account elements such as bandwidth, delay, initial congestion window and receive buffer. Results have shown that MPTCP's congestion window algorithm performs well regardless of the size of the initial congestion window. As expected, the size of the receive buffer is correlated to the delay and bandwidth values. Results for non-shaped traffic validate the accuracy of the simulator and its suitability for the next steps of this project.
+
+In terms of future work, we would like to incorporate OpenVPN over several multipath links in order to provide confidentiality and security. Further more, we aim to discover what protocols are not susceptible to firewall egress filters such that we may use them to create outgoing tunnels and successfully security policies. Candidates include protocols such as UDP, TCP, DNS and HTTP.
