--- a/doc/papers/02.2014/src/introduction.tex
+++ b/doc/papers/02.2014/src/introduction.tex
@@ -36,7 +36,7 @@ The purpose of the initial phase of our project is to build a simulation environ
 \item Delay. Similar to bandwidth, we can manipulate delay in order to observe how MPTCP adapts to different RTT values on different paths.
 \item Loss. Channel loss greater than 10\% has been found to cause MPTCP to
 perform 20-30\% worse than TCP because the congestion controller overestimates
-the throughput of such subflows \cite{how-hard-can-it-be}. We further investigate on this matter.
+the throughput of such subflows \cite{how-hard-can-it-be}.
 \item Receive buffer. The size of the receive buffer is related to the amount
 of data in flight and there is the need for a compromise between using too
 much system memory and using the channel inefficiently.
