--- a/doc/papers/02.2014/src/results.tex
+++ b/doc/papers/02.2014/src/results.tex
@@ -84,7 +84,7 @@ that it relies on the tc utility to perform traffic shaping. While the ability
 to control several aspects of the link between two nodes was extremely useful
 towards our tests, traffic shaping is a costly operation in terms of
 computational power. Given the fact that our testbed is represented by a
-virtual machine which itself employs to process and network namespaces, we
+virtual machine which itself employs process and network namespaces, we
 conclude that the throughput cap manifests because the processing power of the
 virtual machine is not sufficient to process packets as quickly as it would be
 necessary to reach throughputs in the realm of gigabit networking. This is
