--- a/doc/papers/02.2014/src/setup.tex
+++ b/doc/papers/02.2014/src/setup.tex
@@ -29,7 +29,7 @@ modelling basic network equipment.
 \end{figure}
 
 As far as flexibility goes, Mininet offers an elaborate prototyping
-environment. Of all the characteristics described in \ref{sec:tcp-link},
+environment. Of all the characteristics described in Section \ref{sec:tcp-link},
 only the TCP congestion window requires an external tool. All the other
 parameters, which are Layer 2 specific, can be controlled using API calls.
 Furthermore, since the API is targeted at Python, a high-level interpreted
