add new results

--- a/doc/papers/06.2014/src/results.tex
+++ b/doc/papers/06.2014/src/results.tex
@@ -22,3 +22,24 @@ TODO
   \label{fig:mptcp}
 \end{figure}
 
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{img/test-mptcp-05}
+  \caption{UDP and TCP tunnels throughput, half buffer size}
+  \label{fig:mptcp-0.5}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{img/test-mptcp-2}
+  \caption{UDP and TCP tunnels throughput, double buffer size}
+  \label{fig:mptcp-2}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{img/test-mptcp-4}
+  \caption{UDP and TCP tunnels throughput, 4 times buffer size}
+  \label{fig:mptcp-4}
+\end{figure}
+
