--- a/doc/papers/06.2014/src/results.tex
+++ b/doc/papers/06.2014/src/results.tex
@@ -17,13 +17,6 @@ TODO
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{img/test-mptcp}
-  \caption{UDP and TCP tunnels throughput}
-  \label{fig:mptcp}
-\end{figure}
-
-\begin{figure}
-  \centering
   \includegraphics[width=\textwidth]{img/test-mptcp-05}
   \caption{UDP and TCP tunnels throughput, half buffer size}
   \label{fig:mptcp-0.5}
@@ -31,9 +24,23 @@ TODO
 
 \begin{figure}
   \centering
+  \includegraphics[width=\textwidth]{img/test-mptcp}
+  \caption{UDP and TCP tunnels throughput}
+  \label{fig:mptcp}
+\end{figure}
+
+\begin{figure}
+  \centering
   \includegraphics[width=\textwidth]{img/test-mptcp-2}
   \caption{UDP and TCP tunnels throughput, double buffer size}
   \label{fig:mptcp-2}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{img/test-mptcp-3}
+  \caption{UDP and TCP tunnels throughput, triple buffer size}
+  \label{fig:mptcp-3}
 \end{figure}
 
 \begin{figure}
