add results for test with encryption enabled

--- a/doc/papers/06.2014/src/results.tex
+++ b/doc/papers/06.2014/src/results.tex
@@ -4,49 +4,56 @@ TODO
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{img/test-udp}
-  \caption{Single UDP tunnel throughput}
+  \caption{UDP tunnel throughput}
   \label{fig:udp}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{img/test-tcp}
-  \caption{Single TCP tunnel throughput}
+  \caption{TCP tunnel throughput}
   \label{fig:tcp}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{img/test-mptcp-05}
-  \caption{UDP and TCP tunnels throughput, half buffer size}
+  \caption{UDP and TCP tunnels throughput, $buffer size = 0.5 \times BDP$}
   \label{fig:mptcp-0.5}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{img/test-mptcp}
-  \caption{UDP and TCP tunnels throughput}
+  \caption{UDP and TCP tunnels throughput, $buffer size = BDP$}
   \label{fig:mptcp}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{img/test-mptcp-2}
-  \caption{UDP and TCP tunnels throughput, double buffer size}
+  \caption{UDP and TCP tunnels throughput, $buffer size = 2 \times BDP$}
   \label{fig:mptcp-2}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{img/test-mptcp-3}
-  \caption{UDP and TCP tunnels throughput, triple buffer size}
+  \caption{UDP and TCP tunnels throughput, $buffer size = 3 \times BDP$}
   \label{fig:mptcp-3}
 \end{figure}
 
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{img/test-mptcp-4}
-  \caption{UDP and TCP tunnels throughput, 4 times buffer size}
+  \caption{UDP and TCP tunnels throughput, $buffer size = 4 \times BDP$}
+  \label{fig:mptcp-4}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{img/test-mptcp-2-crypto}
+  \caption{UDP and TCP tunnels throughput, $buffer size = 2 \times BDP$, Blowfish CBC and SHA1}
   \label{fig:mptcp-4}
 \end{figure}
 
